[gd_scene load_steps=5 format=3 uid="uid://cgbyrfskejfog"]

[ext_resource type="Script" path="res://scripts/splitscreen.gd" id="1_e0shh"]
[ext_resource type="Script" path="res://scripts/camera_1.gd" id="1_ol4fa"]
[ext_resource type="Script" path="res://scripts/camera_2.gd" id="4_1x333"]
[ext_resource type="PackedScene" uid="uid://dj8kitg0fqqeg" path="res://scenes/game_manager.tscn" id="7_xm8t0"]

[node name="Splitscreen" type="Node2D"]
script = ExtResource("1_e0shh")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1804, 1000)
layout_mode = 3
anchors_preset = 0
offset_right = 1200.0
offset_bottom = 800.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(1804, 100)
layout_mode = 1
offset_right = 1804.0
offset_bottom = 1200.0

[node name="SubViewportContainer1" type="SubViewportContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="Control/HBoxContainer/SubViewportContainer1"]
handle_input_locally = false
size = Vector2i(900, 1000)
render_target_update_mode = 4

[node name="Camera1" type="Camera2D" parent="Control/HBoxContainer/SubViewportContainer1/SubViewport"]
zoom = Vector2(1.6, 1.6)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("1_ol4fa")

[node name="SubViewportContainer2" type="SubViewportContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="Control/HBoxContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(900, 1000)
render_target_update_mode = 4

[node name="Camera2" type="Camera2D" parent="Control/HBoxContainer/SubViewportContainer2/SubViewport"]
zoom = Vector2(1.6, 1.6)
limit_smoothed = true
position_smoothing_enabled = true
script = ExtResource("4_1x333")

[node name="GameManager" parent="." instance=ExtResource("7_xm8t0")]
